# oddly

./: .gitignore  LICENSE  PAPER.html  PAPER.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
oddly/: __init__.py  backtest.py  cli.py  config.py  sec_filings.py
oddly/.backtests/: cef_tender_backtest_20260716_224116.json
