[project]
name = "oddly"
version = "1.0.0"
description = "AI-powered odd-lot tender arbitrage scanner — find tender offers institutions can't touch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [{ name = "KORROCORP" }]
keywords = ["trading", "arbitrage", "odd-lot", "tender-offer", "sec", "edgar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.28",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
oddly = "oddly.cli:main"

[project.urls]
Homepage = "https://github.com/KorroAi/oddly"
Repository = "https://github.com/KorroAi/oddly.git"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
